--- a/index.html
+++ b/index.html
@@ -1,1 +1,194 @@
 
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
+    <title>WeeklyTest 4</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css">
+</head>
+
+<body>
+    <!-- Nav bar start -->
+    <header class="header">
+        <div class="navContainer">
+            <div>
+                <h2><a href="#">LOGO</a></h2>
+            </div>
+
+            <div class="navItems">
+                <div>
+                    <a href="#head">Home</a>
+                </div>
+
+                <div>
+                    <a href="#services">Services</a>
+                </div>
+
+                <div>
+                    <a href="#">Portfolio</a>
+                </div>
+
+                <div>
+                    <a href="#about">About Us</a>
+                </div>
+
+                <div>
+                    <a href="#contact">Contact Us</a>
+                </div>
+
+            </div>
+        </div>
+    </header>
+    <!-- Nav bar closed -->
+
+    <!-- section 1 start -->
+    <section class="sectionWithImage" id="head">
+        <div class="content">
+            <div class="text">
+                <h1>Camping Gear and Essentials</h1>
+                <p>
+                    Discover top-quality camping gear for unforgettable outdoor adventures. <br> Gear up and make
+                    lasting memories.</p>
+            </div>
+            <a href="#services">Our Services</a>
+        </div>
+    </section>
+    <!-- section 1 closed -->
+
+    <section class="serviceSection" id="services">
+
+        <div class="serviceHeading">
+            <h1>Our Services</h1>
+            <p>Explore our wide range of camping gear services.</p>
+        </div>
+
+        <div class="cards">
+            <div class="cardDetails">
+                <div><img src="https://media.timeout.com/images/105658195/image.jpg" alt=""></div>
+                <div class="cardsData">
+                    <h2>Tents</h2>
+                    <p>Experience comfort and protection with our high-quality camping tents.</p>
+                </div>
+            </div>
+
+            <div class="cardDetails">
+                <div>
+                    <img src="https://media.timeout.com/images/105658195/image.jpg" alt=""></div>
+                <div class="cardsData">
+                    <h2>Sleeping Bags</h2>
+                    <p>Stay cozy and warm during your camping trips with our premium sleeping bags.</p>
+                </div>
+            </div>
+
+            <div class="cardDetails">
+                <div>
+                    <img src="https://media.timeout.com/images/105658195/image.jpg" alt=""></div>
+                <div class="cardsData">
+                    <h2>Camp Stoves</h2>
+                    <p>Cook delicious meals in the great outdoors with our reliable camp stoves.</p>
+                </div>
+            </div>
+
+            <div class="cardDetails">
+                <div><img src="https://media.timeout.com/images/105658195/image.jpg" alt=""></div>
+                <div class="cardsData">
+                    <h2>Backpacks</h2>
+                    <p>Carry your essentials comfortably with our durable and functional camping backpacks.</p>
+                </div>
+            </div>
+
+            <div class="cardDetails">
+                <div><img src="https://media.timeout.com/images/105658195/image.jpg" alt=""></div>
+                <div class="cardsData">
+                    <h2>Camp Chairs</h2>
+                    <p>Relax and unwind in style with our comfortable and portable camping chairs.</p>
+                </div>
+            </div>
+
+            <div class="cardDetails">
+                <div><img src="https://media.timeout.com/images/105658195/image.jpg" alt=""></div>
+                <div class="cardsData">
+                    <h2>Camp Lights</h2>
+                    <p>Illuminate your campsite with our reliable and energy-efficient camping lights.</p>
+                </div>
+            </div>
+
+        </div>
+
+    </section>
+
+
+
+    <section class="about">
+
+        <div class="serviceHeading" id="about">
+            <h1>About Us</h1>
+            <p>Discover our story in providing camping services.</p>
+        </div>
+
+
+        <div class="row company-info">
+            <h3>Our Story</h3>
+            <p>Experience the excellence of our camping gear and services, where we have been offering high-quality
+                camping essentials and gear for outdoor enthusiasts for over a decade. Our commitment to quality and
+                customer satisfaction ensures that every adventurer can rely on us for their camping needs.</p>
+        </div>
+        <div class="row company-info">
+            <h3>Our Mission</h3>
+            <p>At Camping Gear Experts, our mission is to equip outdoor enthusiasts with top-notch camping gear and
+                essentials that enhance their outdoor experiences. We strive to provide reliable, durable, and
+                innovative products that contribute to memorable adventures and lasting memories.</p>
+            <h3>Our Vision</h3>
+            <p>Our vision is to become the go-to destination for camping enthusiasts, known for our extensive selection
+                of premium camping gear and exceptional customer service. We aspire to inspire and enable people to
+                embrace the beauty of nature and create unforgettable camping experiences.</p>
+        </div>
+        <div class="row team">
+            <h3>Our Team</h3>
+            <ul>
+                <li>John Doe - Founder and CEO</li>
+                <li>Jane Smith - Gear Specialist</li>
+                <li>Mark Johnson - Customer Representative</li>
+                <li>Sarah Brown - Operations Manager</li>
+            </ul>
+        </div>
+    </section>
+
+    <section class="contact" id="contact">
+
+        <div class="serviceHeading">
+            <h1>Contact Us</h1>
+            <p>Reach out to us for any inquiries or feedback.</p>
+        </div>
+
+
+        <div class="row">
+            <div class="col information">
+                <div class="contact-details">
+                    <p><i class="fas fa-map-marker-alt"></i> 123 Campsite Avenue, Wilderness, CA 98765</p>
+                    <p><i class="fas fa-envelope"></i> info@campinggearexperts.com</p>
+                    <p><i class="fas fa-phone"></i> (123) 456-7890</p>
+                    <p><i class="fas fa-clock"></i> Monday - Friday: 9:00 AM - 5:00 PM</p>
+                    <p><i class="fas fa-clock"></i> Saturday: 10:00 AM - 3:00 PM</p>
+                    <p><i class="fas fa-clock"></i> Sunday: Closed</p>
+                    <p><i class="fas fa-globe"></i> www.codingnepalweb.com</p>
+                </div>
+            </div>
+            <div class="col form">
+                <form>
+                    <input type="text" placeholder="Name*" required>
+                    <input type="email" placeholder="Email*" required>
+                    <textarea placeholder="Message*" required></textarea>
+                    <button id="submit" type="submit">Send Message</button>
+                </form>
+            </div>
+        </div>
+    </section>
+
+
+</body>
+
+</html>
